--- a/css/style.css
+++ b/css/style.css
@@ -1014,7 +1014,7 @@ button::-moz-focus-inner {
 }
 @media (max-width: 47.99875em) {
   .first-screen {
-    background: #C83232 url(../img/fs-mob.webp) bottom right/ contain no-repeat;
+    background: #C83232 url(../img/fs-mob.webp) bottom right /347px no-repeat;
   }
 }
 .first-screen::after {
@@ -2520,9 +2520,9 @@ button::-moz-focus-inner {
 .img-responsive {
   display: block;
   width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
   -o-object-position: center;
      object-position: center;
 }
